# recipe_agent

./: .gitignore  app.py  client_ws.py  main.py
agents_mock/: graph_core.py  pyproject.toml  schemas.py
agents_mock/tools/: recipe_search.py
recipe_search_mini_app/: SYSTEM_DESC.md  app.py  main.py  models.py  pyproject.toml  recipes.db  schema.sql
recipe_search_mini_app/agent/: calc_agent.py  pyproject.toml
recipe_search_mini_app/app/: LEARNED.md  app.py  db.py  pyproject.toml  recipes.db
recipe_search_mini_app/chemistry/: chebi_lite_demo.py  pyproject.toml  rdkit_demo.py  wine.py
recipe_search_mini_app/crawler/: client_plamo_openai.py  collect_urls.py  count_chars.py  crawl_depth1_print.py  fetch_page.py  filter_recipes.py  inspect_page.py  mine_terms.py  recipes_depth1.jsonl  scrape_batch.py  scrape_one.py  skipped.jsonl
recipe_search_mini_app/crawler/site_prober/: generic_fallback.py  prefer_jsonld.py  probe_site.py
recipe_search_mini_app/crawler/translation_test/: recipes_filtered.jsonl  recipes_translated_google.jsonl  recipes_translated_preview.jsonl  terms_directions_bigram.csv  terms_directions_unigram.csv  terms_ingredients_bigram.csv  terms_ingredients_unigram.csv  translate_preview_10.py  translate_preview_google.py
recipe_search_mini_app/food_info/: fdc_get_one.py  fdc_search_spice_min.py  fdc_show_nutrients.py  nutrition_check.py  pyproject.toml
recipe_search_mini_app/food_info/crawl_nutrition_class/: check_table.py  convert_fooddb_txt_to_json.py  crawl_mext_page.py  expand_table.py  extract_mext_vitamins_minerals.py  (+5 more)
(+4 files in other folders)
