[project]
name = "recipe-search-mini-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "deepl>=1.22.0",
    "fastapi>=0.116.1",
    "google-cloud-translate==2.0.1",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
